# drf-pyseto

./: .gitignore  404.html  LICENSE  README.md  RELEASING.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
customizing/: index.html
docs/: customizing.md  endpoints.md  getting_started.md  index.md  settings.md
drf_pyseto/: apps.py  authentication.py  conf.py  exceptions.py  serializers.py  tokens.py  urls.py  views.py
endpoints/: index.html
examples/: README.md
examples/minimal/example_api/: urls.py  views.py
examples/minimal/example_project/: settings.py  urls.py
getting_started/: index.html
search/: search_index.json
settings/: index.html
tests/: settings.py  test_api.py  test_conf.py  test_tokens.py  urls.py
