[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drf-pyseto"
version = "0.1.0"
description = "Django REST Framework authentication using PASETO (pyseto)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name" }]
license = { text = "MIT" }
keywords = ["django", "drf", "paseto", "pyseto", "auth"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "Django>=4.2",
  "djangorestframework>=3.14",
  "pyseto>=1.7",
]

[project.optional-dependencies]
test = [
  "pytest>=7.4",
  "pytest-django>=4.7",
]

[tool.setuptools]
packages = ["drf_pyseto"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py"]
addopts = "-q"
