[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drf-pyseto"
version = "0.1.1"
description = "Django REST Framework authentication using PASETO (pyseto)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Pravin" }]
license = { text = "MIT" }
keywords = ["django", "drf", "paseto", "pyseto", "auth"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  "Framework :: Django :: 5.2",
  "Framework :: Django :: 6.0",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
  "Django>=4.2",
  "djangorestframework>=3.16",
  "pyseto>=1.7",
]

[project.optional-dependencies]
test = [
  "pytest>=7.4",
  "pytest-django>=4.7",
  "tox>=4.15",
]
docs = [
  "mkdocs-material>=9.0",
]

[tool.setuptools]
packages = ["drf_pyseto"]

[tool.pytest.ini_options]
pythonpath = "."
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py"]
addopts = "-q"
